# MA-FIRD

./: CMakeLists.txt  LICENSE  README.md
include/: Algorithm.hpp  Config.hpp  Data.hpp  Evaluation.hpp  Generator.hpp  Insertion.hpp  Node.hpp  Operator.hpp  Parameters.hpp  Population.hpp  RLAgent.hpp  Random.hpp  Route.hpp  Searcher.hpp  Solution.hpp
solutions/JD/: F1001.txt  F1002.txt  F1003.txt  F1004.txt  F201.txt  F202.txt  F203.txt  F204.txt  F401.txt  F402.txt  F403.txt  F404.txt  F601.txt  F602.txt  F603.txt  F604.txt  F801.txt  F802.txt  F803.txt  F804.txt
solutions/WC/: cdp101.txt  cdp102.txt  cdp103.txt  cdp104.txt  cdp105.txt  cdp106.txt  cdp107.txt  cdp108.txt  cdp109.txt  cdp201.txt  cdp202.txt  cdp203.txt  cdp204.txt  cdp205.txt  cdp206.txt  cdp207.txt  cdp208.txt  rcdp1001.txt  rcdp1004.txt  rcdp1007.txt  rcdp101.txt  rcdp102.txt  rcdp103.txt  rcdp104.txt  rcdp105.txt  rcdp106.txt  rcdp107.txt  rcdp108.txt  rcdp201.txt  rcdp202.txt  rcdp203.txt  rcdp204.txt  rcdp205.txt  rcdp206.txt  rcdp207.txt  rcdp208.txt  rcdp2501.txt  rcdp2504.txt  rcdp2507.txt  rcdp5001.txt  (+25 more)
src/: Algorithm.cpp  Data.cpp  Evaluation.cpp  Generator.cpp  Insertion.cpp  Node.cpp  Operator.cpp  Parameters.cpp  Population.cpp  RLAgent.cpp  Route.cpp  Searcher.cpp  Solution.cpp  main.cpp
